# pushswap-upadte

./: CMakeLists.txt  Makefile  author  start.sh
checker/: Makefile  checker
checker/inc/: push_swap.h
checker/src/: algorithm.c  command.c  flags_list.c  push_swap.c  utils.c  validate.c
ft_printf/: Makefile  check_format.c  ft_printf.c  ft_printf.h  output.c  read_arg.c  read_flags.c  save_conf.c
inc/: push_swap.h
libft/: Makefile  ft_addnchr_e.c  ft_addnchr_s.c  ft_strcmp.c
pushswap/: CMakeLists.txt  Makefile  push_swap
pushswap/inc/: push_swap.h
pushswap/src/: main.c  search_median.c
